# Analises-e-commerce

./: README.md  dashboard.py  gerar_dados.py  previsao_vendas.py  pyproject.toml  requirements.txt  segmentacao_clientes.py
