[project]
name = "python-analises-ecommerce"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.13.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandas-stubs~=3.0.2",
    "plotly>=5.0.0",
    "prophet>=1.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
]
